Simplify
No functional changes